--- a/app/assets/stylesheets/tools/variables.scss
+++ b/app/assets/stylesheets/tools/variables.scss
@@ -24,3 +24,5 @@ $body-font-color: $black;
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 $header-font-family: 'Raleway', sans-serif;
+$header-font-weight: 600;
+//$header-font-style: semi-bold;
